# uGB

./: CMakeLists.txt  README.md
arch/: types.h
core/: CMakeLists.txt
core/inc/: cartridge.h  graphics.h  memory.h  opcodes.h  processor.h
core/src/: CMakeLists.txt  cartridge.c  graphics.c  memory.c  opcodes.c  processor.c
test/: CMakeLists.txt  main.c
